--- a/AFZV31_HFT_2023241.WpfClient/MainWindow.xaml
+++ b/AFZV31_HFT_2023241.WpfClient/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AFZV31_HFT_2023241.WpfClient"
         mc:Ignorable="d"
-        Title="Annual Editor" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
         <local:MainWindowViewModel />
     </Window.DataContext>
@@ -21,5 +21,14 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <StackPanel Grid.Column="1">
+            <Label Content="Name" Background="LightGoldenrodYellow" Padding="10" />
+            <TextBox Text="{Binding SelectedAnnual.AnnualName}" Padding="10" Margin="0,0,0,30" />
+            <Button Content="Create Annual" Command="{Binding CreateAnnualCommand}" Margin="10" Padding="10" />
+            <Button Content="Delete Annual" Command="{Binding DeleteAnnualCommand}" Margin="10" Padding="10" />
+            <Button Content="Update Annual" Command="{Binding UpdateAnnualCommand}" Margin="10" Padding="10" />
+            <Label Content="{Binding ErrorMessage}" FontSize="18" Foreground="Red" HorizontalContentAlignment="Center" />
+        </StackPanel>
+
     </Grid>
 </Window>
